this works now maybe idk

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ upload_port = /dev/serial/by-id/usb-Arduino_RaspberryPi_Pico_815460E636235BDB-if
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
-
+monitor_speed = 115200
 ; Rather than use the repo'ed toolchains, we want to use the arduino-pico 'Arduino core' implementation.
 ; This implementation includes the Pico SDK from the Raspberry Foundation, so that you don't have to worry about downloading/compiling it.
 ; You also don't have to worry about header file paths and such, per usual.
@@ -35,3 +35,4 @@ platform_packages =
     maxgerhardt/framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git
     maxgerhardt/toolchain-pico@https://github.com/earlephilhower/pico-quick-toolchain/releases/download/1.3.3-a/x86_64-linux-gnu.arm-none-eabi-ed6d983.220212.tar.gz
 
+extra_scripts = tmux-monitor-start.py
